--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,23 @@
+* {box-sizing: border-box;
+  text-align: center;
+}
+
 body{
-    background:#ffffff;
+    background: #4aaaa5
+    ffffff;
     border: 1px solid #dddddd;
     width: 960px;
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
     color:#777777; 
     text-align:center;
-    margin-top: 20px;
-
-
-
+    margin:auto;
 }
-
-
+header{
+    width: 100%;
+    height: 100px;
+    border-bottom: 2px solid #777777;
+    padding: 10px;
+}
 
 h1{
     background: #4aaaa5;
@@ -19,33 +25,58 @@ h1{
     font-size: 36px;
     font-weight: bold;
     border: 1px solid #cccccc;
+    height: 100px;
     color: #ffffff;
     width: 400px;
-    padding: 30px;
+    padding: 10px;
 
 }
-
-#About {
-    position:fixed;
+#Contact {
+    float: right;
+    top: 40px;
+    right: 230px;
+    bottom: 50px;
+    padding: 10px;
+    width: 33%;
+    height: 30px;
     color:#4aaaa5;
-    background:#cccccc;
-
+    background:#ffffff;
+    border: 1px solid #ffffff;
 
 }
 
 #Portfolio {
+    position: fixed;
+    top: 40px;
+    right: 310px;
+    bottom: 50px;
+    padding: 10px;
+    width: 70px;
+    height: 30px;
     color:#4aaaa5;
+    background:#ffffff;
+    border: 1px solid #ffffff;
+    
+}
+#About {
+    position: fixed;
+    top: 40px;
+    right: 380px;
+    bottom: 50px;
+    padding: 10px;
+    width: 70px;
+    height: 30px;
+    color:#4aaaa5;
+    background:#ffffff;
+    border: 1px solid #ffffff;
     
 }
 
-#Contact {
-    color:#4aaaa5;
-}
-
-
 .info{
 
+   
 }
+
 
 h2 {
     position: relative;
@@ -55,12 +86,10 @@ h2 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bold;
     font-size: 36px;
-    width:265px;
+    width:365px;
     border: 1px solid #ffffff;
     background: #ffffff;
     padding:20px;
-
-
 }
 
 .hline {
@@ -84,7 +113,7 @@ p{
 
 }
 
-p{}
+
     
 
-}
+
