--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,111 +1,82 @@
 * {box-sizing: border-box;
   text-align: center;
+  
 }
 
 body{
-    background: #4aaaa5
-    ffffff;
-    border: 1px solid #dddddd;
+    margin: 0 auto;
     width: 960px;
-    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-    color:#777777; 
-    text-align:center;
-    margin:auto;
-}
-header{
-    width: 100%;
-    height: 100px;
-    border-bottom: 2px solid #777777;
-    padding: 10px;
-}
-
-h1{
-    background: #4aaaa5;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 36px;
-    font-weight: bold;
-    border: 1px solid #cccccc;
-    height: 100px;
-    color: #ffffff;
-    width: 400px;
-    padding: 10px;
-
-}
-#Contact {
-    float: right;
-    top: 40px;
-    right: 230px;
-    bottom: 50px;
-    padding: 10px;
-    width: 33%;
-    height: 30px;
-    color:#4aaaa5;
-    background:#ffffff;
-    border: 1px solid #ffffff;
-
-}
-
-#Portfolio {
-    position: fixed;
-    top: 40px;
-    right: 310px;
-    bottom: 50px;
-    padding: 10px;
-    width: 70px;
-    height: 30px;
-    color:#4aaaa5;
-    background:#ffffff;
-    border: 1px solid #ffffff;
-    
-}
-#About {
-    position: fixed;
-    top: 40px;
-    right: 380px;
-    bottom: 50px;
-    padding: 10px;
-    width: 70px;
-    height: 30px;
-    color:#4aaaa5;
-    background:#ffffff;
-    border: 1px solid #ffffff;
-    
-}
-
-.info{
-
    
+    
 }
 
+#container{
+    background:#ffffff;
+    border: 1px solid #cccccc;
+    width: 960px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
 
-h2 {
-    position: relative;
-    top:0;
-    left:0;
-    color: #4aaaa5;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: bold;
-    font-size: 36px;
-    width:365px;
-    border: 1px solid #ffffff;
-    background: #ffffff;
-    padding:20px;
 }
 
-.hline {
-    width:100%; 
-    height:1px; 
-    background: #ffffff 
+#header{
+    background-color:#4aaaa5;
+    border:1px solid #cccccc;
+    color:#ffffff; 
+    font-size:36px; 
+    width:480px;
+    float:left;
+    Height:78px;
+    padding: 20px;
+
+}
+    
+#navbar{
+    width: 480px;
+    clear:both;
+    height:249px;
+    font-size:18px;
+
 }
 
-img{
+#navbar ul{
+    margin:0;
+    padding:0;
+    list-style-type:none;
+
+}
+
+#navbar ul li{
+    float: right;
+    padding-bottom: 20px;
+    color:#4aaaa5;
+    width: 480PX;
+    clear:both;
+    display:block;
+
+}
+    
+#content{
+    background:#ffffff;
+    border:#dddddd;
+    color:#777777;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+}
+
+#conheader{
+    color:#4aaaa5;
+    width: 100%;
+
+}
+
+#image{
     float:left;
     padding: 15px;
     margin: 10px;
 
 }
 
-p{
+.p{
     text-align: left;
     padding: 25px;
     margin:0px;
@@ -113,6 +84,10 @@ p{
 
 }
 
+#footer{
+    background: #666666;
+    width: 100%;
+}
 
     
 
