--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,85 +1,104 @@
 * {box-sizing: border-box;
-  text-align: center;
+  
   
 }
 
 body{
+    width:960px;
     margin: 0 auto;
-    width: 960px;
-   
-    
+    background-image:"https://www.toptal.com/designers/subtlepatterns/?s=spiration";
 }
 
 #container{
     background:#ffffff;
-    border: 1px solid #cccccc;
-    width: 960px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-
+    
 }
 
-#header{
+h1{
     background-color:#4aaaa5;
     border:1px solid #cccccc;
     color:#ffffff; 
-    font-size:36px; 
-    width:480px;
-    float:left;
-    Height:78px;
+    font-size:32px; 
+    width:50%;
+    Height:100%;
     padding: 20px;
-
+    margin: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    float:left;
 }
-    
-#navbar{
-    width: 480px;
+
+.navbar{
     clear:both;
-    height:249px;
+    height:100%;
+}
+
+#About{
+    float:right;
+    width: 15%;
+    height: 100%;
+    color: #4aaaa5;
     font-size:18px;
-
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
+    padding: 10px;
+    border:1px solid #cccccc;
 }
 
-#navbar ul{
-    margin:0;
-    padding:0;
-    list-style-type:none;
-
+#Portfolio{
+    float:right;
+    width: 15%;
+    color: #4aaaa5;
+    font-size:18px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
+    padding: 10px;
+    border:1px solid #cccccc;
 }
 
-#navbar ul li{
-    float: right;
-    padding-bottom: 20px;
-    color:#4aaaa5;
-    width: 480PX;
-    clear:both;
-    display:block;
-
+#Contact{
+    float:right;
+    width: 15%;
+    color: #4aaaa5;
+    font-size:18px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
+    padding: 10px;
+    border:1px solid #cccccc;
 }
-    
-#content{
+
+hr{
+    color:#777777;
+}
+.content{
     background:#ffffff;
     border:#dddddd;
     color:#777777;
-    font-family: Arial, Helvetica, sans-serif;
     width: 100%;
+    
 }
 
-#conheader{
+h2{
     color:#4aaaa5;
     width: 100%;
-
+    padding: 8px 10px 0px 20px;
+    margin: 10px;
+    font-size: 24px;
+    
 }
 
 #image{
-    float:left;
-    padding: 15px;
+    float: left;
+    padding: 10px;
     margin: 10px;
 
 }
 
 .p{
-    text-align: left;
-    padding: 25px;
-    margin:0px;
+    color:#777777;
+    padding: 15px;
+    margin: 0px;
+    line-height:22px;
+    font-family: Arial, Helvetica, sans-serif;
     
 
 }
@@ -87,8 +106,67 @@ body{
 #footer{
     background: #666666;
     width: 100%;
+    padding: 20px;
 }
 
+#wrap{
+    background:#ffffff;
+    border:#dddddd;
+    color:#777777;
+    width: 960px;
+}
+
+#contactme{
+    background:#ffffff;
+    border:#dddddd;
+    color:#777777;
+    width: 25%;
+}
+
+h3{
+    color:#4aaaa5;
+    width: 100%;
+    padding: 8px 10px 0px 20px;
+    margin: 10px;
+    font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#input{
+
+    border: 1px solid #777777;
+    width:75%;
+    height: 50px;
+}
     
+#input2{
+
+    border: 1px solid #777777;
+    width:75%;
+    height: 50px;
+}
+
+#input3{
+
+    border: 1px solid #777777;
+    width:75%;
+    height: 250px;
+}
+
+.button{
+
+    background: #4aaaa5;
+    color:#ffffff;
+    padding: 10px;
+  
+}
+
+footer1{
+    background: #666666;
+    color:#ffffff;
+    width: 960;
+    height:50px;
+    padding: 20px;
+}
 
 
